feat: Enable GraalVM builds for the CLI